--- a/card.css
+++ b/card.css
@@ -1,16 +1,47 @@
 body{
     background-color: #ccc;
-    font-family: Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif; /* First tries to use Helvetica, if not available on computer, goes down list */
     color: #222;
+    margin-top: 100px;
 }
 
 img{
     width: 100%;
 }
 
+h1{
+    margin: 15px 0;                  /* 15px on top and bottom, 0 on sides */
+}
+
+h2{
+    margin: 0;                      /* Gets rid of margin on all sides that is there on default */
+    font-weight: 100;               /* Thinnest weight available to our font-family*/
+}
+
 .card {
     background-color: #f3f3f3;
-    margin: 0 auto;
+    border-radius: 15px;            /* Creates rounded edges*/
+    margin: 0 auto;                 /* When used with width, centers items on page */
     width: 400px;
-    text-align: center;
+    text-align: center;             /* Helps to align both text and images */
+    box-shadow: rgba(0, 0, 0, 0.1) 0 0 20px;            /* 0 on Red, Green and Blue to have black color, 0.1 for transparency (light), x offset, y offset, and blur(how spread out is the shadow)= 20px */
+    border: 2px solid #aaa;
+}
+
+.card .avatar{
+    width: 100px;
+    border-radius: 50%;             /* Makes square a circle */
+    margin-top: -50px;
+}
+
+.contacts{
+    margin: 0;
+    margin: 0;
+    list-style-type: none;          /*Gets rid of bullets*/
+}
+
+.contacts li{
+    width: 30px;
+    display: inline-block;          /* Puts list items in a horizontal line instead of vertical */
+    padding: 20px 10px;             /* Top and bottom has a cusion of 20px and left and right has a cusion of 10px */
 }
